@@ -171,6 +171,20 @@ void			QuadWallSceneNode::init(const GLfloat base[3],
 				vEdge[1] * vEdge[1] + vEdge[2] * vEdge[2]));
   float area = uLength * vLength;
 
+  // If negative then these values aren't a number of times to repeat
+  // the texture along the surface but the width, or a desired scaled
+  // width, of the texture itself. Repeat the texture as many times 
+  // as necessary to fit the surface.
+  if (uRepeats < 0.0f)
+  {
+      uRepeats = - uLength / uRepeats;
+  }
+
+  if (vRepeats < 0.0f)
+  {
+      vRepeats = - vLength / vRepeats;
+  }
+
   // compute how many LODs required to get smaller edge down to
   // elements no bigger than 4 units on a side.
   int uElements = int(uLength) / 2;
